--- a/CarDealer/CarDealer/CarDealerProject.csproj
+++ b/CarDealer/CarDealer/CarDealerProject.csproj
@@ -123,6 +123,7 @@
     <Compile Include="Models\Car.cs" />
     <Compile Include="Models\CarDealer.cs" />
     <Compile Include="Models\CreateMockData.cs" />
+    <Compile Include="Models\Helpers\TempDataHelper.cs" />
     <Compile Include="Models\Logger\Logger.cs" />
     <Compile Include="Models\Nhibernate\INHibertnateSession.cs" />
     <Compile Include="Models\Nhibernate\MockNHibertnateSession.cs" />
@@ -136,6 +137,8 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Content Include="Content\Images\bg.gif" />
+    <Content Include="Content\Images\Kari1.png" />
+    <Content Include="Content\Images\Logo.png" />
     <Content Include="Content\Styles\Site.css" />
     <Content Include="Global.asax" />
     <Content Include="Models\Nhibernate\CarDealer.hbm.xml" />
