--- a/CarDealer/CarDealer/CarDealerProject.csproj
+++ b/CarDealer/CarDealer/CarDealerProject.csproj
@@ -138,9 +138,10 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Content Include="Content\Images\bg.gif" />
+    <Content Include="Content\Images\Footer.png" />
     <Content Include="Content\Images\Kari1.png" />
     <Content Include="Content\Images\Logo.png" />
-    <Content Include="Content\Site.css" />
+    <Content Include="Content\old_Site.css" />
     <Content Include="Content\Styles\Site.css" />
     <Content Include="Content\Themes\base\images\ui-bg_flat_0_aaaaaa_40x100.png" />
     <Content Include="Content\Themes\base\images\ui-bg_flat_75_ffffff_40x100.png" />
