--- a/CarDealer/CarDealer/CarDealerProject.csproj
+++ b/CarDealer/CarDealer/CarDealerProject.csproj
@@ -40,6 +40,12 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Microsoft.CSharp" />
+    <Reference Include="Microsoft.Practices.Unity">
+      <HintPath>..\packages\Unity.3.0.1304.1\lib\Net45\Microsoft.Practices.Unity.dll</HintPath>
+    </Reference>
+    <Reference Include="Microsoft.Practices.Unity.Configuration">
+      <HintPath>..\packages\Unity.3.0.1304.1\lib\Net45\Microsoft.Practices.Unity.Configuration.dll</HintPath>
+    </Reference>
     <Reference Include="NHibernate">
       <HintPath>Resources\NHibernate.dll</HintPath>
     </Reference>
@@ -109,6 +115,9 @@
       <Private>True</Private>
       <HintPath>..\packages\Microsoft.AspNet.WebPages.2.0.20710.0\lib\net40\System.Web.WebPages.Razor.dll</HintPath>
     </Reference>
+    <Reference Include="Unity.Mvc4">
+      <HintPath>..\packages\Unity.Mvc4.1.2.0.0\lib\net40\Unity.Mvc4.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Controllers\AbstractController.cs" />
@@ -123,15 +132,16 @@
     <Compile Include="Models\Attributes\CarYearAttribute.cs" />
     <Compile Include="Models\Car.cs" />
     <Compile Include="Models\CarDealer.cs" />
-    <Compile Include="Models\CreateMockData.cs" />
+    <Compile Include="Support\CreateFakeData.cs" />
     <Compile Include="Models\Helpers\TempDataHelper.cs" />
     <Compile Include="Models\Logger\Logger.cs" />
-    <Compile Include="Models\Nhibernate\INHibertnateSession.cs" />
-    <Compile Include="Models\Nhibernate\MockNHibertnateSession.cs" />
+    <Compile Include="Models\Nhibernate\INHibernateSession.cs" />
+    <Compile Include="Support\MockNHibernateSession.cs" />
     <Compile Include="Models\Nhibernate\NHibernateSession.cs" />
     <Compile Include="Models\Attributes\BirthDateAttribute.cs" />
     <Compile Include="Models\Person.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Support\BootStrapper.cs" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="App_Start\FilterConfig.cs" />
@@ -221,6 +231,7 @@
     <Content Include="Scripts\knockout-2.2.0.js" />
     <Content Include="Scripts\modernizr-2.6.2.js" />
     <Content Include="Scripts\_references.js" />
+    <Content Include="Unity.Mvc4.README.txt" />
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
@@ -240,13 +251,13 @@
     <Content Include="Views\Home\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Views\Person\Index.cshtml" />
+    <Content Include="Views\Person - %28Unused%29\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Views\CarDealer\All.cshtml" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Views\Person\GetPersons.cshtml" />
+    <Content Include="Views\Person - %28Unused%29\GetPersons.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Views\CarDealer\Details.cshtml" />
@@ -276,19 +287,19 @@
     <Content Include="Views\Car\Delete.cshtml" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Views\Person\Create.cshtml" />
+    <Content Include="Views\Person - %28Unused%29\Create.cshtml" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Views\Person\All.cshtml" />
+    <Content Include="Views\Person - %28Unused%29\All.cshtml" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Views\Person\Edit.cshtml" />
+    <Content Include="Views\Person - %28Unused%29\Edit.cshtml" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Views\Person\Details.cshtml" />
+    <Content Include="Views\Person - %28Unused%29\Details.cshtml" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Views\Person\Delete.cshtml" />
+    <Content Include="Views\Person - %28Unused%29\Delete.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Views\Shared\_Layout.cshtml" />
@@ -306,10 +317,10 @@
     <Content Include="Views\Car\Search.cshtml" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Views\Person\DataContainer.cshtml" />
+    <Content Include="Views\Person - %28Unused%29\DataContainer.cshtml" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Views\Person\Search.cshtml" />
+    <Content Include="Views\Person - %28Unused%29\Search.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Views\CarDealer\SingleDataContainer.cshtml" />
