--- a/CarDealer/CarDealer/Web.config
+++ b/CarDealer/CarDealer/Web.config
@@ -17,25 +17,37 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
 
-
+  <connectionStrings>
+    <add name="dbContext" connectionString="Data Source=(LocalDB)\v11.0;AttachDbFilename=|DataDirectory|\CarDealerDB.mdf;Integrated Security=True;Connect Timeout=30" providerName="System.Data.SqlClient" />
+  </connectionStrings>
 
   <unity xmlns="http://schemas.microsoft.com/practices/2010/unity">
     <alias alias="INHibernateSession" type="CarDealerProject.Models.Nhibernate.INHibernateSession, CarDealerProject" />
+    <alias alias="MockNHibernateSession" type="CarDealerProject.Support.MockNHibernateSession, CarDealerProject" />
     <alias alias="NHibernateSession" type="CarDealerProject.Models.Nhibernate.NHibernateSession, CarDealerProject" />
     <container>
+      <!--<register type="INHibernateSession" mapTo="MockNHibernateSession" />-->
       <register type="INHibernateSession" mapTo="NHibernateSession" />
     </container>
   </unity>
 
-  <!--<unity xmlns="http://schemas.microsoft.com/practices/2010/unity">
-    <alias alias="INHibernateSession" type="CarDealerProject.Models.Nhibernate.INHibernateSession, CarDealerProject" />
-    <alias alias="MockNHibernateSession" type="CarDealerProject.Support.MockNHibernateSession, CarDealerProject" />
-    <container>
-      <register type="INHibernateSession" mapTo="MockNHibernateSession" />
-    </container>
-  </unity>-->
-
   <system.web>
+    <authentication mode="Forms">
+      <forms loginUrl="~/Home/Index"  timeout="2880"/>
+    </authentication>
+
+    <roleManager enabled="true" defaultProvider="SimpleRoleProvider">
+      <providers>
+        <clear />
+        <add name="SimpleRoleProvider" type="WebMatrix.WebData.SimpleRoleProvider, WebMatrix.WebData, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" />
+      </providers>
+    </roleManager>
+    <membership defaultProvider="SimpleMembershipProvider">
+      <providers>
+        <clear />
+        <add name="SimpleMembershipProvider" type="WebMatrix.WebData.SimpleMembershipProvider, WebMatrix.WebData" />
+      </providers>
+    </membership>
 
     <httpRuntime targetFramework="4.5" />
 
